k8s/metabase-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
  namespace: vicenct-dev
  labels:
    app: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      nodeSelector:
        kubernetes.io/hostname: cluster-01-workers-4phg9-6w74j
      containers:
        - name: metabase
          image: metabase/metabase:v0.62.13
          ports:
            - containerPort: 3000
              name: http
          startupProbe:
            httpGet:
              path: /api/health
              port: 3000
            failureThreshold: 40
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 18
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 4
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
            limits:
              memory: 4Gi
              cpu: "2"
